--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "cd webpack && webpack-dev-server --mode development"
+  },
   "devDependencies": {
     "cssnext": "^1.8.4",
     "eslint-config-standard": "^10.2.1",
@@ -8,5 +11,24 @@
     "eslint-plugin-standard": "^3.0.1",
     "gulp-postcss": "^7.0.0",
     "postcss-cssnext": "^3.0.2"
+  },
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "echarts": "^4.1.0",
+    "express": "^4.16.3",
+    "html-webpack-plugin": "^3.2.0",
+    "promise-polyfill": "^7.1.2",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.1.2",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2",
+    "webpack-dev-server": "^3.1.4"
   }
 }
