--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dev": "cd webpack && webpack-dev-server --mode development"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "cssnext": "^1.8.4",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
@@ -10,6 +12,7 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "gulp-postcss": "^7.0.0",
+    "js-beautify": "^1.7.5",
     "postcss-cssnext": "^3.0.2"
   },
   "dependencies": {
@@ -20,6 +23,8 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "brain": "^1.0.0",
+    "brain.js": "^1.2.2",
     "echarts": "^4.1.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
