--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "babel-preset-stage-1": "^6.24.1",
     "brain": "^1.0.0",
     "brain.js": "^1.2.2",
+    "css-loader": "^1.0.0",
     "echarts": "^4.1.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "promise-polyfill": "^7.1.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-hot-loader": "^4.1.2",
+    "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4"
