--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "echarts": "^4.1.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^1.1.0",
     "promise-polyfill": "^7.1.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -36,6 +37,7 @@
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "stylus-relative-loader": "^4.0.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4"
