--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "cd webpack && webpack-dev-server --mode development"
+    "dev": "cd react/hook && webpack-dev-server --mode development"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -30,9 +30,10 @@
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "loader-utils": "^1.1.0",
+    "prettier-eslint": "^8.8.2",
     "promise-polyfill": "^7.1.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
     "react-hot-loader": "^4.1.2",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
