--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "scripts": {
-    "dev": "cd react/hook && webpack-dev-server --mode development"
+    "dev": "cd react/hook && webpack-dev-server --mode development",
+    "build": "cd react/hook && webpack --mode production",
+    "commit": "git-cz"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "cssnext": "^1.8.4",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -17,6 +19,7 @@
   },
   "dependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.26.0",
@@ -25,11 +28,22 @@
     "babel-preset-stage-1": "^6.24.1",
     "brain": "^1.0.0",
     "brain.js": "^1.2.2",
+    "commitizen": "^3.1.1",
     "css-loader": "^1.0.0",
     "echarts": "^4.1.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-flowtype": "^3.6.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "loader-utils": "^1.1.0",
+    "prettier": "^1.17.0",
     "prettier-eslint": "^8.8.2",
     "promise-polyfill": "^7.1.2",
     "react": "^16.7.0-alpha.2",
@@ -39,8 +53,34 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "stylus-relative-loader": "^4.0.0",
+    "stylus-supremacy": "^2.12.7",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "linters": {
+      "src/**/*.{js,jsx}": [
+        "eslint --fix",
+        "git add"
+      ],
+      "*.styl": [
+        "stylus-supremacy format --options .stylint.json -r",
+        "git add"
+      ]
+    },
+    "ignore": [
+      "src/assets/**/*"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
